our chefs are ready for provide your service

--- a/index.html
+++ b/index.html
@@ -38,6 +38,50 @@
 			</section>
 
 		</header>
+		<section class="about-section">
+			<div class="about container">
+				<div class="about-text">
+					<h6>READ OUR STORY</h6>
+					<h2>We've been Making The Delicious Foods Since 1999</h2>
+					<p>Fusce hendrerit malesuada lacinia. Donec semper semper sem vitae malesuada. Proin scelerisque risus et ipsum semper
+					molestie sed in nisi. Ut rhoncus congue lectus, rhoncus venenatis leo malesuada id.</p>
+					<p>Sed elementum vel felis sed scelerisque. In arcu diam, sollicitudin eu nibh ac, posuere tristique magna. You can usethis template for your cafe or restaurant website. Please tell your friends about templatemo. Thank you.</p>
+				</div>
+				<div class="about-img">
+					<img src="images/about-image.jpg" alt="">
+				</div>
+			</div>
+		</section>
+		<section class="chef-section">
+			<div class="chefs container">
+				<h2>Meet our chefs</h2>
+				<h6>THEY ARE NICE & FRIENDLY</h6>
+				<div class="chefs-cards">
+					<div class="card">
+						<div class="card-img">
+							<img src="images/team-image1.jpg" alt="">
+						</div>
+						<h4>New Catherine</h4>
+						<h6>KITCHEN OFFICER</h6>
+					</div>
+					<div class="card">
+						<div class="card-img">
+							<img src="images/team-image2.jpg" alt="">
+						</div>
+						<h4>Lindsay Perlen</h4>
+						<h6>OWNER & MANAGER</h6>
+					</div>
+					<div class="card">
+						<div class="card-img">
+							<img src="images/team-image3.jpg" alt="">
+						</div>
+						<h4>Isabella Grace</h4>
+						<h6>PIZZA SPECIALIST</h6>
+					</div>
+
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
