--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<section class="about-section">
 			<div class="about container">
 				<div class="about-text">
-					<h6>READ OUR STORY</h6>
+					<h5>READ OUR STORY</h5>
 					<h2>We've been Making The Delicious Foods Since 1999</h2>
 					<p>Fusce hendrerit malesuada lacinia. Donec semper semper sem vitae malesuada. Proin scelerisque risus et ipsum semper
 					molestie sed in nisi. Ut rhoncus congue lectus, rhoncus venenatis leo malesuada id.</p>
@@ -62,24 +62,39 @@
 							<img src="images/team-image1.jpg" alt="">
 						</div>
 						<h4>New Catherine</h4>
-						<h6>KITCHEN OFFICER</h6>
+						<h5>KITCHEN OFFICER</h5>
 					</div>
 					<div class="card">
 						<div class="card-img">
 							<img src="images/team-image2.jpg" alt="">
 						</div>
 						<h4>Lindsay Perlen</h4>
-						<h6>OWNER & MANAGER</h6>
+						<h5>OWNER & MANAGER</h5>
 					</div>
 					<div class="card">
 						<div class="card-img">
 							<img src="images/team-image3.jpg" alt="">
 						</div>
 						<h4>Isabella Grace</h4>
-						<h6>PIZZA SPECIALIST</h6>
+						<h5>PIZZA SPECIALIST</h5>
 					</div>
 
 				</div>
+			</div>
+		</section>
+		<section class="menu-section">
+			<div class="menu-area">
+				<h2>Our Menus</h2>
+				<h6>TEA TIME & DINING</h6>
+				<div class="menus">
+					<img src="images/menu-image1.jpg" alt="">
+					<img src="images/menu-image2.jpg" alt="">
+					<img src="images/menu-image3.jpg" alt="">
+					<img src="images/menu-image4.jpg" alt="">
+					<img src="images/menu-image5.jpg" alt="">
+					<img src="images/menu-image6.jpg" alt="">
+				</div>
+
 			</div>
 		</section>
 	</main>
