--- a/index.html
+++ b/index.html
@@ -97,6 +97,62 @@
 
 			</div>
 		</section>
+		<section class="contact-section">
+			<div class="container contact-area">
+				<div class="map">
+					<img src="images/map.jpg" alt="">
+				</div>
+				<div class="contact-form">
+					<h2>Contact Us</h2>
+					<div class="form-area">
+						<div>
+							<input class="name" type="text" placeholder="Full name">
+							<input class="email" type="email" placeholder="Email address">
+						</div>
+						<input class="subject" type="text" placeholder="Subject"><br>
+						<textarea name="" id="" placeholder="Tell about your project"></textarea>
+						<button class="message-btn"><a href="">Send Message</a></button>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
+	<footer>
+		<section class="footer-area container">
+			<div class="find-us">
+				<h3>Find us</h3>
+				<p>123 nulla a cursus rhoncus,
+				augue sem viverra 10870
+				id ultricies sapien</p>
+			</div>
+			<div class="reserv">
+				<h3>Reservation</h3>
+				<p>090-080-0650 | 090-070-0430 <br> nfo@company.com <br>LINE: eatery247</p>
+			</div>
+			<div class="office-time">
+				<div>
+					<h3>Open Hours</h3>
+					<p class="closed">Monday: Closed</p>
+					<h5>Tuesday to Friday</h5>
+					<p>7:00 AM - 9:00 PM</p>
+					<h5>Saturday - Sunday</h5>
+					<p>11:00 AM - 10:00 PM</p>
+				</div>
+			</div>
+			<div class="social-media">
+				<div class="social-media-icon">
+					<div><a href="#"><img src="images/icon/facebook-square-brands.svg" alt=""></a></div>
+					<div><a href="#"><img src="images/icon/twitter-brands.svg" alt=""></a></div>
+					<div><a href="#"><img src="images/icon/instagram-brands.svg" alt=""></a></div>
+					<div><a href="#"><img src="images/icon/google-brands.svg" alt=""></a></div>
+
+				</div>
+				<p>Copyright © 2018 <br>
+				Roy Resturent</p>
+				<p>Design: Dev Roy</p>
+
+			</div>
+		</section>
+	</footer>
 </body>
 </html>
